Add send email api
